// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<h3>
  Viewing 
  1
   
  expense
   totaling 
  $2.35
   
</h3>
`;

exports[`should correctly render ExpensesSummary with 2 expenses 1`] = `
<h3>
  Viewing 
  23
   
  expenses
   totaling 
  $454.54
   
</h3>
`;
